--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 - title: Αρχική
   url: /
 - title: Ρυθμίσεις Git
-  url: /Obsidian_Git_Settings
+  url: /Obsidian_Git_Settings.md
 - title: Troubleshooting
-  url: /troubleshooting
+  url: /troubleshooting.md
