--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 - title: Αρχική
-  url: /
+  url: /ObsidianGitDocs
 - title: Ρυθμίσεις Git
-  url: /Obsidian_Git_Settings.md
+  url: /ObsidianGitDocs/Obsidian_Git_Settings
 - title: Troubleshooting
-  url: /troubleshooting.md
+  url: /ObsidianGitDocs/troubleshooting
