--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,12 @@
 title: Obsidian Git Docs
-description: Οδηγός Git Sync για το Obsidian
-markdown: kramdown
+description: Οδηγός για σύνδεση Obsidian με Git
+baseurl: "/ObsidianGitDocs"
+theme: jekyll-theme-cayman
+plugins:
+  - jekyll-relative-links
+relative_links:
+  enabled: true
+  collections: true
+exclude:
+  - README.md
+  - LICENSE
