Προσθήκη τελικού Jekyll setup με πραγματικό περιεχόμενο 5

--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,17 @@
 title: Obsidian Git Docs
 description: Οδηγός για σύνδεση Obsidian με Git
 baseurl: "/ObsidianGitDocs"
-theme: jekyll-theme-cayman
 plugins:
   - jekyll-relative-links
 relative_links:
   enabled: true
   collections: true
+defaults:
+  - scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: default
 exclude:
   - README.md
   - LICENSE
