--- a/.github/workflows/convert-links.yml
+++ b/.github/workflows/convert-links.yml
@@ -5,7 +5,8 @@ on:
     branches:
       - main
     paths:
-      - 'ObsidianGitDocs/**'
+      - '**.md'
+      - '.github/workflows/convert-links.yml'
 
 jobs:
   convert_links:
