--- a/.github/workflows/convert-links.yml
+++ b/.github/workflows/convert-links.yml
@@ -57,5 +57,5 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
-          git add ObsidianGitDocs/
+          git add .
           git diff --quiet || (git commit -m "Auto-convert Obsidian [[links]] to Markdown links" && git push)
